...
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
...
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:endIconMode="password_toggle"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Progress Bar (Initially Hidden) -->
    <ProgressBar
...
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:indeterminateTint="@android:color/white" />

    <TextView
        android:id="@+id/forgotPassword"
        android:text="@string/forgot_password"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/newUserSignUp"
        android:text="@string/dont_have_account_sign_up"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
...
