...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"/>
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabLayout"/>
    </LinearLayout>

    <!-- Thin Divider Above Bottom Navigation -->
...
            android:src="@drawable/ic_search"
            android:contentDescription="Search" />


        <!-- Add Mood Button -->
        <ImageButton
            android:id="@+id/addMoodButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"

...
